# sierra_launcher

./: .gitignore  Cargo.toml  README.md  install.sh
config/: Sierra
src/: install.sh  main.rs  theme.rs  watcher.rs
src/app/: message.rs  mod.rs  state.rs  subscription.rs  update.rs  view.rs
src/config/: mod.rs
src/panels/: app_list.rs  clipboard_panel.rs  clock.rs  mod.rs  mpris_player.rs  music.rs  right_main_panels.rs  search_bar.rs  services.rs  services_bottom_row.rs  system.rs  system_services.rs  title_color.rs  wallpaper_panel.rs  weather.rs
src/utils/: Mpris_player_state.rs  cclip.rs  copy.rs  data.rs  item.rs  mod.rs  monitor.rs  theme.rs  wallpaper_manager.rs
