[package]
name = "sierra_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.31", features = ["system", "disk", "network"] }
iced = { version = "0.14", features = ["advanced"] }
iced_layershell = "0.14.2"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.13"
regex = "1.11"
chrono = "0.4"
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5.0"
mpris = "2.0"
lazy_static = "1.4"
arboard = "3.4"
wayland-client = "0.31"
wayland-protocols-wlr = "0.3"
tracing = "0.1"
fuzzy-matcher = "0.3"

[dependencies.gio]
version = "0.20"
features = ["v2_66"]