[package]
name = "sierra_launcher"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3              
lto = "fat"                
codegen-units = 1         
strip = true               
panic = "abort"            
overflow-checks = false    
debug = false              

[profile.release.package."*"]
opt-level = 2
codegen-units = 8

[profile.dev]
opt-level = 1
incremental = true

[dependencies]
sysinfo = { version = "0.31", features = ["system", "disk", "network"] }
iced = { version = "0.14", features = ["advanced"] }
iced_layershell = "0.14.2"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.13"
regex = "1.11"
chrono = "0.4"
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5.0"
mpris = "2.0"
lazy_static = "1.4"
wayland-client = "0.31"
wayland-protocols-wlr = "0.3"
tracing = "0.1"
fuzzy-matcher = "0.3"
rayon = "1.8"              
parking_lot = "0.12"       
wl-clipboard-rs = "0.9"


[dependencies.gio]
version = "0.20"
features = ["v2_66"]