[package]
name = "sierra_launcher"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0              # no optimization
debug = 1                  # minimal debug info
incremental = true
codegen-units = 256        # maximize parallelism
panic = "unwind"

# Disable optimization for ALL dependencies in dev
[profile.dev.package."*"]
opt-level = 0
debug = 0
codegen-units = 256

[profile.release]
opt-level = 3
lto = "thin"               # MUCH faster than fat
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false

[dependencies]
sysinfo = { version = "0.31", features = ["system", "disk", "network"] }

iced = { version = "0.14", features = ["advanced"] }
iced_layershell = "0.14.2"

notify = "6.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.13"

regex = "1.11"
chrono = "0.4"
bincode = "1.3"

reqwest = { version = "0.11", features = ["blocking", "json"] }

dirs = "5.0"
mpris = "2.0"
lazy_static = "1.4"

wayland-client = "0.31"
wayland-protocols-wlr = "0.3"

tracing = "0.1"
fuzzy-matcher = "0.3"

rayon = "1.8"
parking_lot = "0.12"
wl-clipboard-rs = "0.9"
arc-swap = "1.7"

[dependencies.gio]
version = "0.20"
features = ["v2_66"]
